<resources>
    <string name="app_name">Va Vedem</string>
    <string name="app_menu">Menu</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="register_email">Email</string>
    <string name="email_hint">Adresa email</string>
    <string name="register_password">Parola</string>
    <string name="password_hint">Parola(minim 8 caractere)</string>
    <string name="password_confirm_hint">Confirmare parola</string>
    <string name="error_email">Va rog folositi un e-mail valid</string>
    <string name="error_password">Va rog folositi o parola valida(minim 8 caractere)</string>
    <string name="error_password_missmatch">Ati folosit parole diferite</string>
    <string name="button_forgot_passowrd">Ai uitat parola?</string>
    <string name="button_reset_password">Resetare Parola</string>
    <string name="password_missmatch">Ati folosit parole diferite</string>
    <string name="user_description">Descriere</string>
    <string name="user_edit">Edit</string>
    <string name="user_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="menu_message">Messages</string>
    <string name="visitor_text">Continua ca vizitator</string>
    <string name="cerere_empty_state_text">Nu aveti nicio cerere inregistrata! Daca aveti nevoie de informatii, cititi materialul apasand pe textul de jos.</string>
    <string name="cerere_empty_state_info"><u>Informatii Cereri</u></string>
    <string name="cerere_empty_state_adaugare"><u>Depune Cerere</u></string>
    <string name="menu_info">Informatii Cereri</string>
    <string name="menu_depunere">Depune Cerere</string>
    <string name="fragment_cerere_titlu">Cerere</string>
    <string name="menu_noi">Despre Noi</string>
    <string name="menu_contact">Contact Echipa</string>
    <string name="menu_statistica">Statistica</string>
    <string name="menu_primarii">Primarii</string>
    <string name="primarie_empty_state_text">Incarcam primariile…</string>
    <string name="primarie_fail_state_text">Nu am putut incarca primariile. Va rugam verificati-va conexiunea la internet si incercati din nou</string>
    <string name="primarie_fail_state_retry"><u>INCARCA PRIMARIILE</u></string>
    <string name="view_eroare">View-ul nu a putut fi initializat</string>
    <string name="trimite_email">Trimite mail...</string>
    <string name="eroare_email">Nu aveti client de e-mail instalat</string>
    <string name="primarii_search">Cauta primarii</string>
    <string name="primarii_populatie" formatted="false">Populatie: %s</string>
    <string name="cerere_empty_state_primarie_text">Primaria nu are nicio cerere inregistrata! Puteti depune prima cerere!</string>
    <string name="email_titlu"></string>
</resources>
