<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_large_huge"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/app_name"
                android:titleTextColor="@color/white"
                app:popupTheme="@style/Base.AppTheme">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_heading" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/space_medium"
            android:orientation="vertical">

            <com.coruptiaucide.vavedem.utils.EmptyStateRecyclerView
                android:id="@+id/rv_cereri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/space_micro"
               />


            <LinearLayout
                android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_medium"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cerereImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_cereri_empty" />

                <TextView
                    android:id="@+id/cerereText"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/cerere_empty_state_text" />

                <TextView
                    android:id="@+id/cerereInfo"
                    style="@style/TextView.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_medium"
                    android:text="@string/cerere_empty_state_info" />

                <TextView
                    android:id="@+id/cerereAdd"
                    style="@style/TextView.Blue"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_micro_small"
                    android:padding="@dimen/space_micro"
                    android:text="@string/cerere_empty_state_adaugare" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:paddingTop="@dimen/space_micro"
        app:headerLayout="@layout/header_navigation"
        app:itemIconTint="@color/black"
        app:menu="@menu/menu_home" />

</android.support.v4.widget.DrawerLayout>