<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/primarie_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <FrameLayout
                            android:id="@+id/back_layout"
                            android:layout_width="@dimen/space_large"
                            android:layout_height="@dimen/space_large"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="@dimen/space_small"
                            android:layout_marginTop="@dimen/space_small">

                            <com.coruptiaucide.vavedem.utils.TintedImageView
                                android:id="@+id/primarie_back"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_ab_back_material"
                                app:tintColor="@color/black" />

                        </FrameLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/primarieTitle"
                                style="@style/TextView.Heading.Black"
                                android:layout_centerInParent="true" />

                            <TextView
                                android:id="@+id/primariePopulatie"
                                style="@style/TextView.Subheading.LightGrey"
                                android:layout_below="@+id/primarieTitle"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="@dimen/space_micro" />

                        </RelativeLayout>
                    </RelativeLayout>
                </FrameLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/simple_divider_no_inset" />

                <RelativeLayout
                    android:id="@+id/cerere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCerere"
                        style="@style/TextView.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left|center_vertical"
                        android:text="@string/menu_depunere" />

                    <com.coruptiaucide.vavedem.utils.TintedImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_micro"
                        android:src="@drawable/ic_assignment_black_24dp"
                        android:tint="@color/light_blue" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/simple_divider_both_inset" />


                <RelativeLayout
                    android:id="@+id/telefon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTelefon"
                        style="@style/TextView.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left|center_vertical"
                        tools:text="020 7387 7812" />

                    <com.coruptiaucide.vavedem.utils.TintedImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_micro"
                        android:src="@drawable/ic_call_white_24dp"
                        android:tint="@color/light_blue" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/simple_divider_both_inset" />

                <RelativeLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvEmail"
                        style="@style/TextView.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left|center_vertical"
                        tools:text="020 7387 7812" />

                    <com.coruptiaucide.vavedem.utils.TintedImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_micro"
                        android:src="@drawable/ic_mail_outline_white_24dp"
                        android:tint="@color/light_blue" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/simple_divider_both_inset" />

                <RelativeLayout
                    android:id="@+id/adresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAdresa"
                        style="@style/TextView.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="left|center_vertical" />

                    <com.coruptiaucide.vavedem.utils.TintedImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/space_micro"
                        android:src="@drawable/ic_location_on_white_24dp"
                        android:tint="@color/light_blue" />


                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/simple_divider_no_inset" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/space_medium"
            android:orientation="vertical">

            <com.coruptiaucide.vavedem.utils.EmptyStateRecyclerView
                android:id="@+id/rv_cereri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/space_micro" />


            <LinearLayout
                android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_medium"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cerereImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/ic_cereri_empty" />

                <TextView
                    android:id="@+id/cerereText"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_large"
                    android:text="@string/cerere_empty_state_primarie_text" />

                <TextView
                    android:id="@+id/cerereAdd"
                    style="@style/TextView.Blue"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_micro_small"
                    android:padding="@dimen/space_micro"
                    android:text="@string/cerere_empty_state_adaugare" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>